# MemoryVault

./: .gitignore  .pylintrc  README.md  app.py  compose.yaml  docker-compose.yaml  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
azure/: build_settings.sh  deploy.sh
documentation/: context_diagram.drawio  er_diagram.drawio  level1_diagram.drawio  level2_diagram.drawio
src/: app.py  config.py
src/memoryvault/: __init__.py  app.py  config.py
src/memoryvault/models/: base.py  family.py  memory.py  user.py
src/memoryvault/routes/: base.py  settings.py  slideshow.py  user.py
src/memoryvault/services/: memory_util.py
src/memoryvault/static/: memoryUpload.js  register.js  settings.js  slide.js
src/memoryvault/templates/: register.html  settings.html  slide.html
src/models/: __init__.py  family.py  memory.py  user.py  vault.py
src/routes/: __init__.py  base.py  memory.py  settings.py  slideshow.py  user.py
src/services/: __init__.py  memory_util.py  user_util.py  vault_util.py
src/static/: flash.js  memoryUpload.js  register.js  settings.js  slide.js  slideshow.js  style.css
src/templates/: base.html  login.html  memory_upload.html  register.html  settings.html  slide.html  slideshow.html
test/: conftest.py  test_base_routes.py  test_memory_routes.py  test_memory_util.py  test_settings_routes.py  test_slideshow_routes.py  test_user_routes.py  test_user_util.py  test_vault_util.py
